catkin_ws/logs/backend/build.make.795.log.stderr
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/G2oPoseGraph.cpp:9:0:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/G2oPoseGraph.h: In member function ‘void SLAM::G2oPoseGraph::save()’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/G2oPoseGraph.h:65:3: error: ‘cout’ was not declared in this scope
   cout << "what is current index?" << currentIndex << endl;
   ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/G2oPoseGraph.h:65:3: note: suggested alternative:
In file included from /usr/include/boost/assert.hpp:82:0,
                 from /usr/include/boost/system/error_code.hpp:16,
                 from /usr/include/boost/system/system_error.hpp:14,
                 from /usr/include/boost/thread/exceptions.hpp:22,
                 from /usr/include/boost/thread/pthread/mutex.hpp:12,
                 from /usr/include/boost/thread/mutex.hpp:16,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/G2oPoseGraph.h:12,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/G2oPoseGraph.cpp:9:
/usr/include/c++/4.8/iostream:61:18: note:   ‘std::cout’
   extern ostream cout;  /// Linked to standard output
                  ^
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/G2oPoseGraph.cpp:9:0:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/G2oPoseGraph.h:65:55: error: ‘endl’ was not declared in this scope
   cout << "what is current index?" << currentIndex << endl;
                                                       ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/G2oPoseGraph.h:65:55: note: suggested alternative:
In file included from /usr/include/c++/4.8/istream:39:0,
                 from /usr/include/c++/4.8/sstream:38,
                 from /usr/include/c++/4.8/complex:45,
                 from /usr/include/eigen3/Eigen/Core:28,
                 from /home/tuofeichen/g2o/g2o/core/eigen_types.h:30,
                 from /home/tuofeichen/g2o/g2o/config.h:18,
                 from /home/tuofeichen/g2o/g2o/core/g2o_core_api.h:13,
                 from /home/tuofeichen/g2o/g2o/core/hyper_graph.h:40,
                 from /home/tuofeichen/g2o/g2o/core/hyper_dijkstra.h:34,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/G2oPoseGraph.cpp:7:
/usr/include/c++/4.8/ostream:564:5: note:   ‘std::endl’
     endl(basic_ostream<_CharT, _Traits>& __os)
     ^
make[2]: *** [CMakeFiles/frontend.dir/src/G2oPoseGraph.cpp.o] Error 1
make[1]: *** [CMakeFiles/frontend.dir/all] Error 2
make: *** [all] Error 2
